--- a/udemy_data_analysis.ipynb
+++ b/udemy_data_analysis.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\ALVIN KAYI\\Desktop\\python_data_analysis\\projects\\Udemy data analysis\\file.csv')"
+    "df = pd.read_csv(r'file.csv')"
    ]
   },
   {
